# python-playground

./: .gitignore  .pre-commit-config.yaml  README.md
advent-of-code-2018/: day1.py  day2.py  day3.py
advent-of-code-2019/: common.py  day10.py  day10_animation.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  dl_input.py  intcode.py
advent-of-code-2022/: common.py  day1.py  day4.py  day6.py  day8.py  dl_input.py
agent-framework-observability/: README.md
agent-framework-observability/common/: __init__.py  config.py
agent-framework-observability/crewai_agentops/: README.md  pyproject.toml
agent-framework-observability/crewai_agentops/output/: blank_file  complete_guide.md  guide_outline.json
agent-framework-observability/crewai_agentops/src/crewai_agentops/: main.py  main_learning_guide.py  main_poems.py
agent-framework-observability/crewai_agentops/src/crewai_agentops/crews/content_crew/: content_crew.py
agent-framework-observability/crewai_agentops/src/crewai_agentops/crews/content_crew/config/: agents.yaml  tasks.yaml
agent-framework-observability/crewai_agentops/src/crewai_agentops/crews/poem_crew/: poem_crew.py
agent-framework-observability/crewai_agentops/src/crewai_agentops/crews/poem_crew/config/: agents.yaml
agent-framework-observability/langchain_langsmith/: README.md  main.py  pyproject.toml
agent-framework-observability/langgraph_langsmith/: main.py  pyproject.toml
agent-framework-observability/orchestra_braintrust/: main.py  pyproject.toml
agent-framework-observability/pydanticai_logfire/: .envrc  main.py  pyproject.toml
coding_exercises/: happy_string.py
coding_exercises/playing_with_iterators/: thing.py
coding_exercises/sudoku_solver/: inputs.json  solver.py
context-test/: .aiderules  a.py  b.py  docs.md  hello.py  main.py  pyproject.toml
context-test/c/: c.py
fastapi-docker-cloudrun/: .env.template  Dockerfile  README.md  pyproject.toml
fastapi-htmx-firebase/: Dockerfile  README.md  pyproject.toml
fastapi-htmx-firebase/api/: exception_handlers.py  firebase_auth.py  lifetime.py  main.py
fastapi-htmx-firebase/api/routes/: firebase_routes.py  htmx_demo.py
fastapi-htmx-firebase/templates/: todo_index.html  todos.html
fit_file_auto_crop/: .aiderules  .env.template  .gitignore  README.md  crop_activities.py  data_folders.py  explore_wiggles.py  find_suspicious_activities_fit.py  fit_data.py  lat_lon_code.py  pyproject.toml  suspicious_activities.py  test_wiggles_finder.py  wiggles.js  wiggles_finder.py  wiggles_viewer.html
flask_thingy/: requirements.txt
flask_thingy/flask_thingy/: main.py
flask_thingy/tests/: conftest.py  test_stuff.py
foxy/: README.md  export_claud.js  fox_full.md
gnomic-embeddings/: attn.py  pyproject.toml
idea_generator/: generate_ideas.py  requirements.txt
mcp_servers/weather_service/: README.md  pyproject.toml
minimal-project-template/: .pre-commit-config.yaml  Dockerfile  README.md
minimal-project-template/myapp/: main.py
munros/: .aiderules  .env.template  .gitignore  README.md  coords_manip.py  create_icons.py  download_data.py  explore_data.py  extract_data.py  fallon_data.json  munros.html  oms.min.js  pyproject.toml  street_map.js  wiki_data.json
myutil/: setup.py
myutil/myutil/: tracer.py
old/flask_thingy/: requirements.txt  setup.py
old/llm_coding_tests/: README.md  pyproject.toml
old/llm_coding_tests/clicker_game/: README.md  index.htm
old/llm_coding_tests/stock_plot/: README.md  plot.py
old/llm_coding_tests/tiny-rag-app/.prompts/: rag_app_prompt.md
old/llm_experiments_env/: .envrc  .gitignore  pyproject.toml
old/llm_experiments_env/claude_iterate/: README.md  iterate.py
old/llm_experiments_env/example_code/: README.md  chroma_example.py  simple_claud.py  simple_gemini.py  sql_example.py
old/minimal-project-template/: .gitignore  setup.py
old/ml-playground/: README.md  pyproject.toml
old/ml-playground/pytorch/: translation_attention_plot.py  translation_spacy_torchtext.py
old/ml-playground/pytorch/pytorch-lightning/: Pipfile  README.md  view_logs.sh
old/ml-playground/tensorflow/: lstm_encoder_decoder.py
old/nuada/: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  setup.cfg  setup.py
old/race-number-photo-finder/: download_images.py  requirements.txt
old/rubbish/: silly_golf.py
pytorch-lightning/mnist/: data_module.py  run_on_rand.py  three_layer_classifier.py
race-number-photo-finder/: requirements.txt
robot-journeys/: README.md  journeys.py  test_journeys.py
rubbish/: mypy_test.py
vector_db_perf_test/: README.md
vector_db_perf_test/chroma/: hello.py  pyproject.toml
vector_db_perf_test/sqlite-vec-test/: hello.py  pyproject.toml
(+39 files in other folders)
