[project]
name = "written_by_llm"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "written_by_llm"
version = "0.1.0"
description = "Hello"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.2"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ipython = "^8.26.0"
