[project]
name = "uses_llm"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "uses_llm"
version = "0.1.0"
description = "Hello"

[tool.poetry.dependencies]
python = "~3.11"
langchain-anthropic = "^0.1.21"
click = "^8.1.7"
inquirer = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ipython = "^8.26.0"
